# ML-Casper

./: .env.template  .gitignore  main.py  pyproject.toml
data_preprocessing/: data_extraction.py  data_preprocessing.ipynb  evaluate_moves.py  model.py  model2.py  per_move_sample.ipynb
elo_eval/: move_evaluation.ipynb
models/: elo_xgb.json  elo_xgb.meta.json
public/: base.css  base.js  index.css  index.html  index.js
src/: server.py
src/style/: config.py  encoding.py  model.py
style_classifier/: 01_data_collection.py  02_preprocessing.py  03_model_training.py  config.py  run_pipeline.sh  utils_model.py
style_classifier/logs/: log_20251023_192427.out
style_classifier/models/: vocab.json
