[project]
name = "elo-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.1",
    "ipykernel>=7.0.1",
    "polars>=1.34.0",
    "python-chess>=1.999",
    "stockfish>=3.28.0",
    "uvicorn[standard]>=0.38.0",
]
