[project]
name = "elo-estimator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.119.1",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "python-chess>=1.999",
    "scikit-learn>=1.7.2",
    "stockfish>=3.28.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]
